Fix Java 8 compatibility and workflow triggers for PR updates
Co-authored-by: th3w1zard1 <2219836+th3w1zard1@users.noreply.github.com>