@@ -307,8 +307,8 @@ public class NCSDecompCLIRoundTripTest {
       // Compare
       long compareStart = System.nanoTime();
       try {
-         String original = normalizeNewlines(Files.readString(nssPath, StandardCharsets.UTF_8));
-         String roundtrip = normalizeNewlines(Files.readString(decompiled, StandardCharsets.UTF_8));
+         String original = normalizeNewlines(new String(Files.readAllBytes(nssPath), StandardCharsets.UTF_8));
+         String roundtrip = normalizeNewlines(new String(Files.readAllBytes(decompiled), StandardCharsets.UTF_8));
          long compareTime = System.nanoTime() - compareStart;
          operationTimes.merge("compare", compareTime, Long::sum);
 
@@ -338,7 +338,7 @@ public class NCSDecompCLIRoundTripTest {
     * by counting commas in the parameter list. A call with 10 commas indicates 11 parameters.
     */
    private static boolean needsAscNwscript(Path nssPath) throws Exception {
-      String content = Files.readString(nssPath, StandardCharsets.UTF_8);
+      String content = new String(Files.readAllBytes(nssPath), StandardCharsets.UTF_8);
       // Look for ActionStartConversation calls with 11 parameters (10 commas)
       // Pattern matches ActionStartConversation( ... ) where the content between parens
       // contains exactly 10 commas (indicating 11 parameters)
@@ -355,7 +355,7 @@ public class NCSDecompCLIRoundTripTest {
     * Parses #include statements and returns the include file names (without quotes).
     */
    private static List<String> extractIncludes(Path nssPath) throws Exception {
-      String content = Files.readString(nssPath, StandardCharsets.UTF_8);
+      String content = new String(Files.readAllBytes(nssPath), StandardCharsets.UTF_8);
       List<String> includes = new ArrayList<>();
       java.util.regex.Pattern includePattern = java.util.regex.Pattern.compile(
          "#include\\s+[\"<]([^\">]+)[\">]",
